# nw-london-local-ledger

./: .dockerignore  .env.example  .env.local.example  .env.queue.example  .env.replica.example  .eslintrc.json  .gitignore  API_DOCUMENTATION.md  API_INTEGRATION_PLAN.md  AUTHORITY_BRIDGE_SPECIFICATION.md  CONTRIBUTING.md  DATABASE_REPLICA_SUMMARY.md  DATABASE_SCHEMA.md  DEPLOYMENT-CHECKLIST.md  DESIGN_DOCUMENT.md  DEVELOPMENT_STATUS.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  LICENSE  NW_LONDON_EXPANSION.md  PERFORMANCE_DEPLOYMENT.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PROJECT_HYPERION_NW_LONDON_LOCAL_LEDGER.md  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SEO_STRATEGY.md  SYSTEM_IMPROVEMENTS_1X.md  TECHNICAL_ARCHITECTURE.md  VERCEL_BUILD_FIXES.md  build-full.txt  build-output.txt  cache-handler.js  jest.config.js  jest.setup.js  ledger_integration_map.json  next.config.js  package-lock.json  package.json  (+5 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  performance.yml  security.yml
cloudflare/: DEPLOYMENT_GUIDE.md  cache-config.ts
config/: company.json  data-sources.json  nw-london-streets.json  performance-budgets.json  pgbouncer.ini
data/schemas/: 001_initial_schema.sql  002_planning_schema.sql  003_content_schema.sql  004_seo_schema.sql  005_performance_optimization.sql  006_advanced_performance.sql  007_comprehensive_coverage.sql  008_users_and_personalization.sql
database/: schema.sql
docs/: 10X_TRANSFORMATION_ROADMAP.md  BATCH1_IMPLEMENTATION_SUMMARY.md  BATCH2_IMPLEMENTATION_SUMMARY.md  BATCH3_IMPLEMENTATION_SUMMARY.md  BATCH4_IMPLEMENTATION_SUMMARY.md  COMPANY_BRANDING_SUMMARY.md  COMPLIANCE_IMPLEMENTATION.md  COMPREHENSIVE_COVERAGE.md  COMPREHENSIVE_OPTIMIZATION_SUMMARY.md  DATABASE_MIGRATION_GUIDE.md  FINAL_PROJECT_SUMMARY.md  GRAPHQL_MIGRATION_GUIDE.md  HYPER_LOCAL_10X_NW_LONDON_DOMINATION.md  ISR_IMPLEMENTATION.md  MASTER_OPTIMIZATION_SUMMARY.md  MULTI_LAYER_CACHE.md  PERFORMANCE_IMPROVEMENTS.md  PHASE3_OPTIMIZATION_SUMMARY.md  PHASE5_ADDITIONAL_IMPROVEMENTS.md  PHASE6_NEXT_LEVEL_IMPROVEMENTS.md  QUEUE_SYSTEM.md
docs/legal/: api-usage-guidelines.md  compliance-checklist.md  scraping-ethics-guide.md
examples/: cache-usage.ts
infrastructure/docker/: Dockerfile  docker-compose.yml
performance_data/aggregations/: system_hourly_1766277405055.json  system_hourly_1766277405071.json  system_hourly_1766277405086.json  system_hourly_1766277405147.json  system_hourly_1766277405503.json  system_hourly_1766277408409.json  system_hourly_1766277408424.json  system_hourly_1766277410368.json  system_hourly_1766277465065.json  system_hourly_1766277465080.json  system_hourly_1766277465096.json  system_hourly_1766277465159.json  system_hourly_1766277465518.json  system_hourly_1766277465519.json  (+3 more)
phase3-optimizations/4-webassembly/rust-wasm/: Cargo.toml
public/: manifest.json  service-worker.js
rust-wasm/: Cargo.toml  README.md  build.sh
rust-wasm/data-transformer/: Cargo.toml
rust-wasm/data-transformer/src/: lib.rs
rust-wasm/geo-calculator/: Cargo.toml
rust-wasm/geo-calculator/src/: lib.rs
rust-wasm/property-processor/: Cargo.toml
rust-wasm/property-processor/src/: lib.rs
rust-wasm/search-optimizer/: Cargo.toml
rust-wasm/search-optimizer/src/: lib.rs
rust-wasm/stats-engine/: Cargo.toml
rust-wasm/stats-engine/src/: lib.rs
scripts/: benchmark-database.ts  build-isr.js  check-performance-budgets.js  monitor-replication.ts  package-scripts-update.json  setup-replicas.sh
src/: middleware.ts
tests/: LinkInjector.test.ts  middleware.test.ts
workers/: cache-invalidation.ts  edge-cache.ts  multi-region.ts  package.json  wrangler.toml
(+281 files in other folders)
