[workspace]
resolver = "2"
members = [
    "property-processor",
    "geo-calculator",
    "stats-engine",
    "search-optimizer",
    "data-transformer"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NW London Local Ledger"]
repository = "https://github.com/nw-london-local-ledger/rust-wasm"

[workspace.dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.69"
web-sys = "0.3.69"
getrandom = { version = "0.2", features = ["js"] }
rayon = "1.10"
rayon-core = "1.12"
wasm-bindgen-rayon = "1.2"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
geo = "0.28"
geo-types = "0.7"
rstar = "0.12"
ahash = "0.8"
simd-json = { version = "0.13", default-features = false, features = ["serde_impl"] }
flate2 = "1.0"
lz4_flex = "0.11"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
strip = true