[package]
name = "stats-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wee_alloc = { workspace = true }
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
ahash = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"