[package]
name = "nw-london-wasm"
version = "1.0.0"
authors = ["NW London Local"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
rayon = "1.7"
wasm-bindgen-rayon = "1.0"
num-traits = "0.2"
geo = "0.26"
geo-types = "0.7"
chrono = { version = "0.4", features = ["wasmbind"] }
regex = "1.9"
lazy_static = "1.4"
fnv = "1.0"
parking_lot = { version = "0.12", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "Performance",
  "Worker",
  "MessageEvent",
  "DedicatedWorkerGlobalScope",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[package.metadata.wasm-pack]
"wasm-opt" = ["-Oz", "--enable-simd"]